--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.1",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "postcss": "8.4.27",
@@ -29,5 +30,8 @@
     "swr": "^2.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7"
   }
 }
